python/test-data/testTypesProtos4.err
Traceback (most recent call last):
  File "test-data/testTypesProtos4.py", line 27, in <module>
    print(foo(ConcreteWrong()))
  File "test-data/testTypesProtos4.py", line 24, in foo
    return fn(2)
  File "test-data/testTypesProtos4.py", line 20, in <lambda>
    return lambda x: bar(x) # invalid call of bar with argument of type int
WyppTypeError: got value of wrong type
given:    2
expected: value of type str

context: bar(s: str) -> int
                ^^^
declared at: test-data/testTypesProtos4.py:15
caused by: test-data/testTypesProtos4.py:20
  |         return lambda x: bar(x) # invalid call of bar with argument of type int
